@@ -14,6 +14,9 @@ Additional API Changes:
   * [MESOS-8165] Master will now send TASK_GONE status for unknown
     tasks of PARTITION_AWARE frameworks belonging to registered agents
     during explicit reconciliation.
+  * [MESOS-7550] The fields `Resource.disk.source.path.root` and
+    `Resource.disk.source.mount.root` can now be set to relative paths
+    to an agent's work directory.
 
 Unresolved Critical Issues:
 
